--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
     "typescript": "^3.2.4"
