--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^4.5.2",
     "styled-components": "^4.1.3",
     "styled-reset": "^1.6.6"
@@ -33,6 +34,7 @@
     "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
+    "@types/react-sidebar": "^3.0.0",
     "typescript": "^3.2.4"
   }
 }
