--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-router-dom": "^4.3.1",
     "apollo": "^2.3.1",
     "apollo-boost": "^0.1.27",
+    "axios": "^0.18.0",
     "graphql": "^14.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
