--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo": "^2.3.1",
     "apollo-boost": "^0.1.27",
     "axios": "^0.18.0",
+    "google-maps-react": "^2.0.2",
     "graphql": "^14.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -30,6 +31,7 @@
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.30.16",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/prop-types": "^15.5.8",
