--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^4.3.1",
     "apollo": "^2.3.1",
     "apollo-boost": "^0.1.27",
