--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "@types/react-router-dom": "^4.3.1",
     "apollo": "^2.3.1",
     "apollo-boost": "^0.1.27",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.8",
+    "apollo-link-error": "^1.1.7",
+    "apollo-link-http": "^1.5.11",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.14",
+    "apollo-utilities": "^1.2.1",
     "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
     "graphql": "^14.1.1",
@@ -21,7 +29,8 @@
     "react-sidebar": "^3.0.2",
     "react-toastify": "^4.5.2",
     "styled-components": "^4.1.3",
-    "styled-reset": "^1.6.6"
+    "styled-reset": "^1.6.6",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "scripts": {
     "start": "react-scripts-ts start",
