--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "graphql": "^14.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-apollo": "^2.4.0",
+    "react-apollo": "2.1.11",
     "react-dom": "^16.7.0",
     "react-facebook-login": "^4.1.1",
     "react-helmet": "^5.2.0",
