Building for production

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
-    "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
+    "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/googlemaps": "^3.30.16",
@@ -48,6 +49,8 @@
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
     "@types/react-sidebar": "^3.0.0",
+    "gh-pages": "^2.0.1",
     "typescript": "^3.2.4"
-  }
+  },
+  "homepage": "https://jinyeong-jung.github.io/nuber-client"
 }
